add tests for env-secret and secret parsing

--- a/tests/rest-api/methods.yml
+++ b/tests/rest-api/methods.yml
@@ -109,7 +109,7 @@
             "env": {
                 "VAR": "VALUE",
                 "SECRET1": {
-                    "secret": "SECRET_VALUE"
+                    "secret": "secret0"
                 }
             },
             "executor": "",
@@ -134,7 +134,7 @@
             ],
             "requirePorts": false,
             "secrets": {
-                "SECRET1": {
+                "secret0": {
                   "source": "secret/definition/id"
                 }
             },
